[package]
name = "mod2appleii"
version = "0.1.0"
edition = "2021"
authors = ["Mathias Olsson <hypp74@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "0.8"
rustc-serialize = "*"
serde = "1.0"
serde_derive = "1.0"

[dependencies.modfile]
git = "https://github.com/hypp/modfile"
